inlined assumeConstructor